# start-clap

./: Cargo.toml  README.md  cargo-generate.toml  justfile  rustfmt.toml
src/: main.rs
src/cli/: mod.rs  styles.rs
