[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2024"


[dependencies]
anstyle = "1.0.11"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "color"] }

[lints.rust]
unsafe_code = { priority = 5, level = "forbid" }
# unused = { priority = -1, level = "allow" }

[lints.clippy]
all = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "allow" }
restriction = { priority = -1, level = "allow" }
